# kmer_counter

./: CMakeLists.txt  Dockerfile  README.md  interactive.sh
.github/workflows/: run_tests.yml
include/: mpi_openmp_kmer_counter.hpp  naive_kmer_counter.hpp  openmp_kmer_counter.hpp  utils.hpp
src/: kmer_counter_mpi_openmp.cpp  kmer_counter_naive.cpp  kmer_counter_openmp.cpp  main.cpp  mpi.sh  mpi_openmp_kmer_counter.cpp  naive_kmer_counter.cpp  openmp.sh  openmp_kmer_counter.cpp  utils.cpp
tests/: CMakeLists.txt  test_mpi.cpp  test_naive.cpp  test_openmp.cpp
